--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,14 @@
     margin: 0;
     /* border: red 1px solid; */
 }
+
+:root{
+    --bg-color: ##ffffffb9;
+    --box-shadow-color: rgba(0, 0, 0, 0.4);
+    --box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.4);
+    --font-main-color: rgba(0, 0, 0, 0.8);
+    --font-secondary-color: rgba(0, 0, 0, 0.5);
+}
 body,
 .wrapper,
 .list{
